# rule_score_auto_adjust

./: .env.template  .gitignore  .tool-versions  README.md  SKILL.md  apk-mafias-list.csv  install.sh  maliciousAPKs_test.csv  malwarebazaar.http  pyproject.toml  requirements-analysis.txt  rule-score-auto-adjust.skill  rule_score_auto_adjust_haeter.code-workspace  ruletest  runashell  start.sh  test_rule.csv
data_preprocess/: analysis_result.py  apk.py  dataset.py  rule.py  virus_total.py
research/: ngate.md
research/antidot/: antidot.md
research/btmob/: btmob.md
research/coper/: coper.md
research/godfather/: godfather.md
research/not_used/: datzbro.md  hook.md
research/remo/: remo.md
research/teabot/: teabot.md
research/toxicpanda/: toxicpanda.md
research/toxicpanda/behavior_map/: create_phising_overlay  ensure_self_active  interception_of_otp  remote_control
service/prefect/: compose.yaml
tools/: adjust_rule_score.py  analyze_apk.py  apk_predict_to_rule_score.py  apply_rule_info.py  check_media_projection.py  collect_apk_by_family.py  collect_rule_info.py  debug_decode.py  debug_decode_v2.py  decode_tool.py  download_apk.py  download_apk_malware_bazaar.py  generate_behavior_map.py  generate_rule_description.py  generate_rules.py  get_vt_label.py  monitor_bazaar_apks.py  skip_zip_evasion.py
tools/backup/: adjust_rule_score.py  get_specified_family_apks.py  group_behavior_map_by_families.py  prepare_for_rule_releasing.py  run_quark_on_apks_and_rules.py
web/: app.py  requirements.txt
web/static/: index.html
